--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   },
   "homepage": "https://github.com/ktsalik/vueboards-api#readme",
   "dependencies": {
+    "better-sqlite3": "^8.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "md5": "^2.3.0",
     "socket.io": "^4.6.1",
-    "sqlite3": "^5.1.6",
     "uniqid": "^5.4.0"
   }
 }
